--- a/services/sole/src/main/resources/application.yml
+++ b/services/sole/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: sole
 
   datasource:
-    url: ${POSTGRES_URL:jdbc:postgresql://localhost:5001/registration}
+    url: ${POSTGRES_URL:jdbc:postgresql://localhost:5001/sole}
     username: ${POSTGRES_USER:postgres}
     password: ${POSTGRES_PASSWORD:postgres}
     driver-class-name: org.postgresql.Driver
