developments on the development client

--- a/services/vox-aegri/src/main/resources/application.properties
+++ b/services/vox-aegri/src/main/resources/application.properties
@@ -17,13 +17,13 @@ quarkus.kafka.devservices.enabled=${KAFKA_DEV_ENABLED}
 mp.messaging.connector.smallrye-kafka.bootstrap.servers=${KAFKA_BOOTSTRAP_SERVERS}
 
 mp.messaging.incoming.registration-response-in.connector=smallrye-kafka
-mp.messaging.incoming.registration-response-in.topic=${KAFKA_REGISTRATION_RESPONSE_TOPIC}
+mp.messaging.incoming.registration-response-in.topic=registration-response
 mp.messaging.incoming.registration-response-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.incoming.registration-error-in.connector=smallrye-kafka
-mp.messaging.incoming.registration-error-in.topic=${KAFKA_REGISTRATION_ERROR_TOPIC}
+mp.messaging.incoming.registration-error-in.topic=registration-error
 mp.messaging.incoming.registration-error-in.value.deserializer=org.apache.kafka.common.serialization.StringDeserializer
 
 mp.messaging.outgoing.registration-request-out.connector=smallrye-kafka
-mp.messaging.outgoing.registration-request-out.topic=${KAFKA_REGISTRATION_REQUEST_TOPIC}
+mp.messaging.outgoing.registration-request-out.topic=registration-request
 mp.messaging.outgoing.registration-request-out.value.serializer=org.apache.kafka.common.serialization.StringSerializer
